--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -27,3 +27,6 @@ palette = 15=#e0def4
 font-size = 12.5
 window-height = 40
 window-width = 160
+
+keybind = page_up=scroll_page_lines:-15
+keybind = page_down=scroll_page_lines:15
