--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,11 @@ set-option -g renumber-windows on
 # Set to enable mouse support
 setw -g mouse on
 
+# Vi mode
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
