--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+# General
 # For correct colors in tmux
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
@@ -12,16 +13,22 @@ set-option -g renumber-windows on
 # Set to enable mouse support
 setw -g mouse on
 
+# Binds
 # Vi mode
 set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# Moving windows
+bind -n S-Left swap-window -t -1\; select-window -t -1
+bind -n S-Right swap-window -t +1\; select-window -t +1
+
+# Plugins
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -39,6 +46,7 @@ set -g @plugin 'rose-pine/tmux'
 # For neovim
 set -g @resurrect-strategy-nvim 'session'
 
+# Themes
 # Rose Pine theme settings
 set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
 # set -g @rose_pine_host 'on' # Enables hostname in the status bar
